      Thanks to Karol Kozłowski for the suggestion. (Closes: #633485)
  * lib:
    - system/worker:
      - New method 'setPackagePurgeFlag'.
      - The global purge option now unconditionally purges all removed
        packages again.
      - New method 'deletePartialArchives'.
    - config:
      - New option 'cupt::cache::release-file-expiration::ignore'.
  * doc:
    - cupt(1) manual:
      - Documented 'purge' subcommand.

 -- Eugene Lyubimkin <ext-lyubimkin.eugene@nokia.com>  Wed, 13 Jul 2011 09:33:27 +0300

cupt (2.1.2~) UNRELEASED; urgency=low

  * console:
    - Fixed a crash (under certain conditions) when package wildcards are
      used within the 'shell' subcommand. Thanks to Karol Kozłowski for the
      report.
  * lib:
    - Fixed a double use of va_list. Thanks to Julian Andres Klode for the
      report and the patch. (Closes: #630824)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Mon, 20 Jun 2011 19:07:35 +0300

cupt (2.1.1) unstable; urgency=low

  * lib:
    - download/manager:
      - Use poll(2) instead of SO_RCVTIMEO socket property to check for worker
        socket timeouts. Thanks to Jonathan Nieder for the report.
        (Closes: #628992, #630600)
      - Avoided creating new process groups. Fixes delivering stop/resume
        signals to the downloader's worker process. Thanks to Jonathan Nieder
        for the report. (Closes: #629210)
    - system/worker:
      - If the global purging flag was turned on, worker still purged,
        not only removed the packages, removed by resolver, despite the right
        action preview. Fixed this feature, which was introduced in
        2.0.0~beta1.
  * Pass '-ggdb' to the compiler. Makes builds with 'nostrip' in
    DEB_BUILD_OPTIONS debuggable.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Wed, 15 Jun 2011 19:43:58 +0300

cupt (2.1.0) unstable; urgency=low

  * console:
    - New 'showauto' subcommand.
  * lib:
    - cache/relation:
      - Relation: new copy constructor from Relation&&.